# askthebio

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
agent/: README.md  package.json  pnpm-lock.yaml  pyproject.toml  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
agent-test-py/: chat_app.py  client.py  main.py
agent/src/: index.ts  prompt.ts
crawl/: .env  .env.example  README.md  main.py  manual_logins.py  manual_logins.sh  pyproject.toml  testurl.json
crawl/src/: crawl.py  user_input.py
crawl/src/builders/: base_builder.py  code_repo.py  huggingface.py  linkedin.py  website.py  x.py
crawl/src/customizations/: __init__.py  base_customization.py  code_repo.py  huggingface.py  linkedin.py  website.py  x.py
gui/: .env.example  AGENTS.md  README.md  index.html  pnpm-lock.yaml  resp.json  tailwind.config.ts  vite.config.ts  wrangler.toml
gui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
gui/src/components/: ChatView.tsx  CornerBadge.tsx  PersonalAIChat.tsx
gui/src/lib/: app-config.ts
gui/src/pages/: Index.tsx  NotFound.tsx  Privacy.tsx
src/: agent.py
src/builders/: __init__.py  base_builder.py  code_repo.py  linkedin.py  website.py  x.py
